--- a/Group9_HW1_solution.ipynb
+++ b/Group9_HW1_solution.ipynb
@@ -11,7 +11,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -97,15 +96,17 @@
     "class GridWorld:\n",
     " \n",
     "    def __init__(self, width, height):\n",
-    "        # initialize the size of the grid\n",
+    "        # initialize the grid pr\n",
     "        self.width = width\n",
     "        self.height = height\n",
     "        self.grid = [[0 for _ in range(width)] for _ in range(height)]\n",
-    "\n",
-    "        # initialize the start and end states\n",
-    "        self.agent_state = (0,0)\n",
     "        self.win_state = (width-1,height-1)\n",
-    "        self.grid[0][0] = \"A\"\n",
+    "        \n",
+    "    # for resetting the state of the world to the beginning\n",
+    "    def reset(self):\n",
+    "        self.grid = [[0 for _ in range(width)] for _ in range(height)]\n",
+    "        self.agent_state = (0,0)\n",
+    "        self.grid[self.agent_state[0]][self.agent_state[1]] = \"A\"\n",
     "        self.grid[width-1][height-1] = \"W\"\n",
     "    \n",
     "    def valid(self, state):\n",
