Made some fixes to the reset function: - no need to recreate the grid, just modify its contents - rewrite the contents of the winning grid position referring to the win state variable

--- a/Group9_HW1_solution.ipynb
+++ b/Group9_HW1_solution.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,18 +96,22 @@
     "class GridWorld:\n",
     " \n",
     "    def __init__(self, width, height):\n",
-    "        # initialize the grid pr\n",
+    "        # initialize the grid properties - these may never change\n",
     "        self.width = width\n",
     "        self.height = height\n",
     "        self.grid = [[0 for _ in range(width)] for _ in range(height)]\n",
     "        self.win_state = (width-1,height-1)\n",
     "        \n",
+    "        self.reset()\n",
+    "        \n",
     "    # for resetting the state of the world to the beginning\n",
     "    def reset(self):\n",
-    "        self.grid = [[0 for _ in range(width)] for _ in range(height)]\n",
+    "        for i in range(len(self.grid)):\n",
+    "            for j in range(len(self.grid[i])):\n",
+    "                self.grid[i][j] = 0\n",
     "        self.agent_state = (0,0)\n",
     "        self.grid[self.agent_state[0]][self.agent_state[1]] = \"A\"\n",
-    "        self.grid[width-1][height-1] = \"W\"\n",
+    "        self.grid[self.win_state[0]][self[] = \"W\"\n",
     "    \n",
     "    def valid(self, state):\n",
     "        row, col = state\n",
@@ -136,41 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=======\n",
-      "|A|0|0|\n",
-      "=======\n",
-      "|0|0|0|\n",
-      "=======\n",
-      "|0|0|W|\n",
-      "=======\n",
-      "=======\n",
-      "|A|0|0|\n",
-      "=======\n",
-      "|0|0|0|\n",
-      "=======\n",
-      "|0|0|W|\n",
-      "=======\n",
-      "=======\n",
-      "|0|A|0|\n",
-      "=======\n",
-      "|0|0|0|\n",
-      "=======\n",
-      "|0|0|W|\n",
-      "=======\n",
-      "=======\n",
-      "|0|0|0|\n",
-      "=======\n",
-      "|0|A|0|\n",
-      "=======\n",
-      "|0|0|W|\n",
-      "=======\n"
+     "ename": "NameError",
+     "evalue": "name 'width' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[48], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m g \u001b[38;5;241m=\u001b[39m \u001b[43mGridWorld\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(g)\n\u001b[1;32m      3\u001b[0m g\u001b[38;5;241m.\u001b[39mmove(Direction\u001b[38;5;241m.\u001b[39mLEFT)\n",
+      "Cell \u001b[0;32mIn[47], line 33\u001b[0m, in \u001b[0;36mGridWorld.__init__\u001b[0;34m(self, width, height)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgrid \u001b[38;5;241m=\u001b[39m [[\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(width)] \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(height)]\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwin_state \u001b[38;5;241m=\u001b[39m (width\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,height\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m---> 33\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreset\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[47], line 42\u001b[0m, in \u001b[0;36mGridWorld.reset\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39magent_state \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     41\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgrid[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39magent_state[\u001b[38;5;241m0\u001b[39m]][\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39magent_state[\u001b[38;5;241m1\u001b[39m]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 42\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgrid[\u001b[43mwidth\u001b[49m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][height\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mW\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'width' is not defined"
      ]
     }
    ],
@@ -182,6 +165,8 @@
     "g.move(Direction.RIGHT)\n",
     "print(g)\n",
     "g.move(Direction.DOWN)\n",
+    "print(g)\n",
+    "g.reset()\n",
     "print(g)"
    ]
   },
