HW1 - added a period HW2 - added a new notebook with refactored code of the first assignment

--- a/Group9_HW1_solution.ipynb
+++ b/Group9_HW1_solution.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "A = (b1,c3)\n",
     "\n",
-    "simpler chess version: Our Pawns can move either forward, diagonally right or diagonally left\n",
+    "simpler chess version: Our Pawns can move either forward, diagonally right or diagonally left.\n",
     "\n",
     "A = {move forward, move forward-right, move forward-left}\n",
     "\n",
