Made some fixes to the magnetic agent, which was actually doing the very opposite of what the policy intended, causing it to perform very slowly.

--- a/Group9_HW2_solution.ipynb
+++ b/Group9_HW2_solution.ipynb
@@ -38,6 +38,7 @@
    "outputs": [],
    "source": [
     "import random\n",
+    "%load_ext line_profiler\n",
     "# Directions as a faux enum, this is the set A of actions\n",
     "UP = 0\n",
     "LEFT = 1\n",
@@ -293,65 +294,36 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0627e44e-bbae-4c53-8b63-60bc7c8e05b4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'GAMMA = 0.95\\nHEIGHT = 5\\nWIDTH = 5\\nV = [[0 for _ in range(WIDTH)] for _ in range(HEIGHT)]\\nreturns = [[ [] for _ in range(WIDTH)] for _ in range(HEIGHT)]\\ng = GridWorld(HEIGHT, WIDTH, complex=True)\\na = MagneticAgent()\\ng.set_agent(a)'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"GAMMA = 0.95\n",
-    "HEIGHT = 5\n",
-    "WIDTH = 5\n",
-    "V = [[0 for _ in range(WIDTH)] for _ in range(HEIGHT)]\n",
-    "returns = [[ [] for _ in range(WIDTH)] for _ in range(HEIGHT)]\n",
-    "g = GridWorld(HEIGHT, WIDTH, complex=True)\n",
-    "a = MagneticAgent()\n",
-    "g.set_agent(a)\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "942196f5-411c-4f37-93c4-63cf44e47d07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def monte_carlo_simulation(height, width, gamma, agent, num_episodes):\n",
-    "    V = [[0 for _ in range(width)] for _ in range(height)]\n",
-    "    returns = [[ [] for _ in range(width)] for _ in range(height)]\n",
-    "    g = GridWorld(height, width, complex=True)\n",
-    "    g.set_agent(agent)\n",
+    "def monte_carlo_simulation(gridworld, agent, gamma=0.95, num_episodes=100, track=False):\n",
+    "    V = [[0 for _ in range(gridworld.width)] for _ in range(gridworld.height)]\n",
+    "    returns = [[ [] for _ in range(gridworld.width)] for _ in range(gridworld.height)]\n",
+    "    gridworld.set_agent(agent)\n",
     "    \n",
     "    completed_episodes = 0\n",
-    "    while completed_episodes < 500:\n",
+    "    while completed_episodes < num_episodes:\n",
     "        time_step = 0\n",
     "        visited_states = list()\n",
-    "        g.reset()\n",
+    "        gridworld.reset()\n",
     "\n",
     "        \"\"\"the agent should act as long as it hasn't reached the terminal state\"\"\"\n",
-    "        while g.agent.state != g.win_state:\n",
+    "        while gridworld.agent.state != gridworld.win_state:\n",
     "\n",
-    "            selected_action = g.agent.get_action_from_policy()\n",
+    "            selected_action = gridworld.agent.get_action_from_policy()\n",
     "\n",
     "            \"\"\"Calculate the reward for the move. Incorporate this reward into the rewards of all states\n",
     "               that have been visited so far this episode.\"\"\"\n",
-    "            reward_from_action = g.reward(selected_action)\n",
+    "            reward_from_action = gridworld.reward(selected_action)\n",
     "            for i in range(len(visited_states)):\n",
     "                state_in_history = visited_states[-1*i] # moving backwards in time\n",
     "                state_in_history[1] += gamma**i * reward_from_action # element 1 is the reward\n",
-    "            visited_states.append([g.agent.state, reward_from_action])\n",
+    "            visited_states.append([gridworld.agent.state, reward_from_action])\n",
     "\n",
     "            \"\"\"Make the move and increase the time step.\"\"\"\n",
-    "            g.move(selected_action)\n",
+    "            gridworld.move(selected_action)\n",
     "            time_step += 1\n",
     "\n",
     "        \"\"\"After every episode, add the rewards for each visited state into the returns 3-D array (indexed\n",
@@ -364,25 +336,52 @@
     "            V[state[0]][state[1]] = average(returns[state[0]][state[1]])\n",
     "        completed_episodes += 1\n",
     "\n",
-    "        if completed_episodes % 10 == 0:\n",
+    "        if track and completed_episodes % 10 == 0:\n",
     "            print(f\"Completed episodes: {completed_episodes}\")\n",
     "    return V"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e32820e0-54a7-45d6-87f3-e8acbe4d0dff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===========\n",
+      "|A| | | | |\n",
+      "===========\n",
+      "| | |*| |█|\n",
+      "===========\n",
+      "| | | | | |\n",
+      "===========\n",
+      "| | | |█| |\n",
+      "===========\n",
+      "| | |*| |W|\n",
+      "===========\n",
+      "-0.983\t-0.800\t-0.964\t-0.993\t-1.119\t\n",
+      "-0.715\t-0.840\t0.000\t-1.032\t0.000\t\n",
+      "-0.691\t-0.767\t-0.900\t-0.809\t-0.426\t\n",
+      "-0.704\t-0.795\t-0.996\t0.000\t0.163\t\n",
+      "-0.749\t-0.873\t0.000\t0.000\t0.000\t\n"
+     ]
+    }
+   ],
    "source": [
-    "#V = monte_carlo_simulation(5, 5, 0.95, Agent(), 500)\n",
-    "#print_matrix(V)"
+    "height = 5\n",
+    "width = 5\n",
+    "g = GridWorld(height, width, complex=True)\n",
+    "print(g)\n",
+    "V = monte_carlo_simulation(g, Agent(), 0.95, 500)\n",
+    "print_matrix(V)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3a8a868a-a125-47e4-9b03-97a2abc4b141",
    "metadata": {},
    "outputs": [
@@ -390,32 +389,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed episodes: 10\n",
-      "Completed episodes: 20\n",
-      "Completed episodes: 30\n",
-      "Completed episodes: 40\n",
-      "Completed episodes: 50\n",
-      "Completed episodes: 60\n",
-      "Completed episodes: 70\n",
-      "Completed episodes: 80\n",
-      "Completed episodes: 90\n",
-      "Completed episodes: 100\n",
-      "Completed episodes: 110\n",
-      "Completed episodes: 120\n",
-      "Completed episodes: 130\n",
-      "Completed episodes: 140\n",
-      "Completed episodes: 150\n",
-      "Completed episodes: 160\n",
-      "Completed episodes: 170\n",
-      "Completed episodes: 180\n",
-      "Completed episodes: 190\n",
-      "Completed episodes: 200\n",
-      "Completed episodes: 210\n"
+      "-1.117\t-0.898\t-1.039\t-1.026\t-1.309\t\n",
+      "-0.825\t-0.948\t0.000\t-0.906\t0.000\t\n",
+      "-0.816\t-0.853\t-0.878\t-0.494\t0.179\t\n",
+      "-0.876\t-0.968\t-1.153\t0.000\t0.752\t\n",
+      "-0.937\t-1.081\t0.000\t0.000\t0.000\t\n"
      ]
     }
    ],
    "source": [
-    "V = monte_carlo_simulation(5, 5, 0.95, MagneticAgent(), 500)\n",
+    "V = monte_carlo_simulation(g, MagneticAgent(g.win_state), 0.95, 500)\n",
     "print_matrix(V)"
    ]
   }
