Added todo for the future, if we need to build upon this code.

--- a/Group9_HW2_solution.ipynb
+++ b/Group9_HW2_solution.ipynb
@@ -152,6 +152,7 @@
     "            \n",
     "    return (values, actions)\n",
     "\n",
+    "# currently unused:\n",
     "def unique(l):\n",
     "    \"\"\"Get a list of unique items in list l. Takes the first instance of each item \"\"\"\n",
     "    unique = []\n",
@@ -796,9 +797,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4164d084-d984-4cd9-9846-ce68a837b0a4",
+   "metadata": {},
+   "source": [
+    "#### TODO:\n",
+    "- Simplify data structures to make code a bit more readable. States are currently (row, col) pairs. Maybe we can make these simple classes or named tuples so that we can refer to them as state.row and state.col. Returns are also inconveniently referred to as the second element of fix-sized lists, like `step_T_minus_i[1]`. A named tuple wouldn't be so nice here since we prefer mutability.\n",
+    "- Update the new Agent class to not require additional arguments to sample from the policy, so that it has the same function signature as the other Agent classes. Q could be stored as a member variable to the agent, but I'm not sure what to do about epsilon. Maybe epsilon should be added to the base class's policy function, since it theoretically can be used for any agent, not just the argmax one.\n",
+    "- See if there's a way to factor out any common code between `monte_carlo_simulation` (better called `approximate_v`) and `approximate_q`.\n",
+    "- See if there are ways to simplify the `approximate_q` function, since it's quite long"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0620ac16-436e-445b-9985-94e016cafab9",
+   "id": "6df40822-7985-4b02-bb3d-d4e5a121fc2d",
    "metadata": {},
    "outputs": [],
    "source": []
