Added markdown cells for text from the HW PDF

--- a/Group9_HW3_solution.ipynb
+++ b/Group9_HW3_solution.ipynb
@@ -1,6 +1,40 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c9e0042a",
+   "metadata": {},
+   "source": [
+    "# DRL Homework 03"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3d4d76a4",
+   "metadata": {},
+   "source": [
+    "### 1 Homework Review"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "05a91ad9",
+   "metadata": {},
+   "source": [
+    "### 2 Learning a policy via 1-step SARSA\n",
+    "For the following work again work with your own gridworld implementation! You may revise/change pieces of it, or ask other groups for access to their implementation of course.\n",
+    "* Implement tabular 1-step SARSA control\n",
+    "* Measure average Return-per-Episode and plot it against (1) episodes sampled, and (2) wallclock-time\n",
+    "\n",
+    "For an outstanding submission:\n",
+    "\n",
+    "* Visualize the State-Action Values in your gridworld during training at regular intervals, and provide a visualization of them (e.g. a series of images, best combine them into a short video clip)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "1c98ebc3-a5dc-46c8-87eb-82bb5add19d9",
@@ -618,9 +652,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9301c5b6",
+   "metadata": {},
+   "source": [
+    "### 3 Visualizing Variance-Bias Trade-Off\n",
+    "Pick some average return, which constitures roughly the half-way-point between your algorithms average starting return and fully trained return. For both MC- control (from last weeks homework) and 1-step SARSA, do the following: (pick the same state for both!)\n",
+    "* For both SARSA and MC-Control:\n",
+    "    - Sample 1000 or more episodes starting at some specific (e.g. the starting) state, with some specific action\n",
+    "    - Update only this specific starting Q-value!\n",
+    "    - Track how the Q-value changes over the episodes (i.e. provide a list or ndarray with an estimation aver each episode)\n",
+    "* Repeat the above 100 (or more) times for both SARSA and MC-Control 2\n",
+    "* For both SARSA and MC-Control, create a lineplot including mean and std estimation (over the 100+ repeats) vs. episodes sampled\n",
+    "* Interpret the result"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9301c5b6",
+   "id": "71b45888",
    "metadata": {},
    "outputs": [],
    "source": []
