Added function for SARSA Q estimation

--- a/Group9_HW3_solution.ipynb
+++ b/Group9_HW3_solution.ipynb
@@ -408,12 +408,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "id": "f727db4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def approximate_q(gridworld, agent, gamma=0.95, num_episodes=500, track=False):\n",
+    "def approximate_q_mc(gridworld, agent, gamma=0.95, num_episodes=500, track=False):\n",
     "    \"\"\"Approximates Q, a gridworld.width by gridworld.height by actions matrix that \n",
     "       contains the average returns from taking each action in each of the possible\n",
     "       grid states across num_episodes \"\"\"\n",
@@ -504,7 +504,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
+   "id": "010a377f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def approximate_q_sarsa(gridworld, agent, gamma=0.95, num_episodes=500, track=False):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "id": "70a25919",
    "metadata": {},
    "outputs": [
@@ -587,7 +598,7 @@
     "\n",
     "# here, returns is an average return value over the entire grid for each episode.\n",
     "# (ex. returns[0] is the avg. return from ep 1, returns[1] is the avg. return from ep 2)\n",
-    "(Q, returns, times) = approximate_q(g, ArgMaxAgent(), num_episodes=num_episodes, track=True)"
+    "(Q, returns, times) = approximate_q_mc(g, ArgMaxAgent(), num_episodes=num_episodes, track=True)"
    ]
   },
   {
